<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item android:title="@string/api_list">
            <menu>
                <item
                    android:id="@+id/api_anonymous"
                    android:title="@string/anonymous" />

                <item
                    android:id="@+id/api_login"
                    android:title="@string/login" />

                <item
                    android:id="@+id/api_login_with_provider"
                    android:title="Login with provider" />

                <item
                    android:id="@+id/api_register"
                    android:title="@string/register" />

                <item
                    android:id="@+id/api_get_account_info"
                    android:title="@string/get_account" />

                <item
                    android:id="@+id/api_set_account_info"
                    android:title="@string/set_account" />

                <item
                    android:id="@+id/api_verify_login"
                    android:title="@string/verifylogin"/>

                <item
                    android:id="@+id/api_forgot_password"
                    android:title="@string/forgot_password" />

            </menu>
        </item>

        <item android:title="@string/user_interface">
            <menu>
                <item
                    android:id="@+id/action_native_login"
                    android:title="@string/native_login" />

                <item
                    android:id="@+id/action_raas"
                    android:title="@string/raas" />

            </menu>
        </item>

    </group>

</menu>
